--- a/index.html
+++ b/index.html
@@ -1,22 +1,108 @@
 <!DOCTYPE html>
-<style>
-    body{
-        background-color: rgb(0, 0, 0);
-    }
-    .green-text{
-        color:rgb(126, 255, 114);
-        opacity: .5;
-        font-family: 'Source Code Pro', monospace;
-    }
-</style>
-<html>
-    <body class="background">
-    <h1 class="green-text"></h1>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/animation.js"></script>
+<head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/game.js"></script>
     <script>
-        let a=["Hello World!","Nice to meet you","Who are you?"];
-        loopTypingAnimation(a);
+        let game = Game2048();
+        function changeScreen(){
+            let gameboard=game.Board();
+            let x=0;
+            let y=0;
+            for (i of gameboard){
+                x=0;
+                for (j of i){
+                    $(`#${y}:nth-child(${x})`).text(gameboard[y][x]);
+                    x++;
+                }
+                y++;
+            }
+        }
+        $(document).ready(function() {
+            $("#up").click(function(){
+                game.upClick();
+                if (game.judgeEnd === true){
+                    alert("Game over!");
+                } else{
+                    game.addNum();
+                }
+            });
+            $("#right").click(function(){
+                game.rightClick();
+                if (game.judgeEnd === true){
+                    alert("Game over!");
+                } else{
+                    game.addNum();
+                }
+            });
+            $("#down").click(function(){
+                game.downClick();
+                if (game.judgeEnd === true){
+                    alert("Game over!");
+                } else{
+                    game.addNum();
+                }
+            });
+            $("#left").click(function(){
+                game.leftClick();
+                if (game.judgeEnd === true){
+                    alert("Game over!");
+                } else{
+                    game.addNum();
+                }
+            });
+        });
     </script>
-    </body>
+    <style>
+    body {
+        font-family: Comic Sans MS
+      }
+      h1 {
+          font-size: 40px;
+      }
+      
+      table{
+          font-size: 20px;
+      }
+    </style>
+</head>
+<html>
+    <center>
+        <h1>Game 2048</h1>
+        <table>
+            <tr id="0">
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr id="1">
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr id="2">
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr id="3">
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+        </table>
+        <div>
+            <button id="up">up</button>
+        </div>
+        <div>
+            <button id="left">left</button>
+            <button id="right">right</button>
+        </div>
+        <div>
+            <button id="down">down</button>
+        </div>
+    </center>
 </html>
